--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blanchedalmond;
+    background-color: white;
     color: darkgray;
     text-align: center;
     margin-top: 40px;
@@ -53,6 +53,10 @@ header {
     flex-direction: column;
     justify-content: space-evenly;
       background-color: steelblue;
+}
+#projects img {
+    height: 20%;
+    width: 50%;
 }
 .project-links {
     list-style: none;
