--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-    background-color: white;
+    background-color: rgba(0, 0, 0,);
     color: darkgray;
     text-align: center;
-    margin-top: 40px;
+    margin-top: 0;
 }
 #top-nav {
     overflow: hidden;
@@ -61,18 +61,50 @@ header {
 .project-links {
     list-style: none;
 }
-#slideshow {
-    max-width: 1000px;
+.carousel {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
     position: relative;
-    margin: auto;
-    
 }
-.slides img {
-    width: 50%;
-    height: 500px;
+.carousel ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
-.fade {
-    animation: ease-out;
-    animation-duration: 1s;
-    opacity: .5 1;
+.carousel img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.carousel .slide--visible {
+    display: block;
+}
+.carousel .slide--hidden {
+    display: none;
+}
+.carousel button {
+    position: absolute;
+    z-index: 2;
+    background: none;
+    border: none;
+    font-size: 3rem;
+    top: 50%;
+    color: rgba(255, 255, 255);
+    cursor: pointer;
+    border-radius: .25rem;
+    padding: 0 .5rem;
+    background-color: rgba(0, 0, 0, .3);
+}
+.carousel button:hover, .carousel button:focus {
+    color: white;
+    background-color: rgba(0, 0, 0, .5);
+} 
+#prev {
+    left: 1rem;
+}
+#next {
+    right: 1rem;
 }
