--- a/style.css
+++ b/style.css
@@ -1,26 +1,71 @@
-body {
-    background-color: rgba(0, 0, 0,);
-    color: darkgray;
-    text-align: center;
-    margin-top: 0;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+header {
+    background-color: slateblue;
+}
+a {
+    color: rgba(255, 255, 255);
+    text-decoration: none;
 }
 #top-nav {
-    overflow: hidden;
-    position: fixed;
-    background-color: darkgrey;
-    top: 0;
-    left: 0;
-    height: 5%;
-    width: 100%;
-    text-align: center;
+    min-height: 70px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 24px;
 }
 #nav-ul {
     display: flex;
-    margin-top: 5px;
-    flex-direction: row;
-    justify-content: space-evenly;
-    
+    justify-content: space-between;
+    align-items: center;
+    gap: 60px;
 }
+.hamburger{
+        display: none;
+        cursor: pointer;
+}
+.bar {
+     display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    transition: all .3s ease-in-out;
+    background-color: rgba(0,0,0);  
+}
+@media(max-width:768px) {
+    .hamburger{
+        display: block;
+    }
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    #nav-ul{
+        position: fixed;
+        left: -100%;
+        top: 0;
+        width: 100%;
+        flex-direction: row;
+        background-color: darkgrey;
+        text-align: center;
+        transition: .3s;
+    }
+    .nav-links {
+        margin: 16xp 0;
+    }
+    #nav-ul.active{
+        left: 0;
+    }
+} 
 .nav-links {
     list-style: none;
     
@@ -31,7 +76,6 @@ a:link, a:visited {
     text-decoration: none;
    
 }
-  
 a:hover, a:active {
     color: blue ;
 }
