--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a {
     text-decoration: none;
 }
 #top-nav {
-    min-height: 70px;
+    min-height: 55px;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
@@ -23,13 +23,16 @@ a {
     justify-content: space-between;
     align-items: center;
     gap: 60px;
+    z-index: 2;
 }
 .hamburger{
-        display: none;
-        cursor: pointer;
+    position: fixed;
+    display: none;
+    cursor: pointer;
+    z-index: 2;
 }
 .bar {
-     display: block;
+    display: block;
     width: 25px;
     height: 3px;
     margin: 5px auto;
@@ -131,7 +134,7 @@ header {
 }
 .carousel button {
     position: absolute;
-    z-index: 2;
+    z-index: 1;
     background: none;
     border: none;
     font-size: 3rem;
